cabal-version:      3.6
name:               tie
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

data-files: 
  test/golden/**/*.yaml
  test/golden/**/*.out

library
    exposed-modules:  Tie 
                      Tie.Resolve
                      Tie.Type
                      Tie.Operation
                      Tie.Codegen.Imports
                      Tie.Codegen.Operation
                      Tie.Codegen.Response
                      Tie.Codegen.Schema
                      Tie.Name
                      Tie.Codegen.Cabal
                      Tie.Writer

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    aeson, 
                      base,
                      bytestring >= 0.11.2.0,
                      containers,
                      text,
                      directory,
                      filepath,
                      lens,
                      mtl,
                      openapi3,
                      unordered-containers,
                      insert-ordered-containers,
                      prettyprinter,
                      yaml,
                      relude

    mixins:
        base hiding (Prelude),
        relude (Relude as Prelude),
        relude

    hs-source-dirs:   src
    default-language: Haskell2010

test-suite tie-tests
  type:               exitcode-stdio-1.0
  main-is:            Main.hs

  autogen-modules: 
    Paths_tie

  other-modules:
    Paths_tie

  other-modules:
    Test.Tie.Golden
    Test.Tie.Operation

  build-depends:
    , aeson
    , base
    , bytestring
    , containers
    , filepath
    , hspec
    , tasty-hspec
    , tasty
    , tasty-golden
    , openapi3
    , tasty-hunit
    , tie
    , text
    , prettyprinter
    , relude
    , insert-ordered-containers
    , yaml

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude),
    relude

  build-tool-depends: tasty-discover:tasty-discover
  hs-source-dirs:     test