cabal-version:      3.0
name:               tie
version:            0.1.0.0
synopsis:
  Tie allows generation of Haskell server stubs from 
  OpenAPI (v 3.x) specifications.

bug-reports:        https://github.com/scarf-sh/tie/issues
package-url:        https://github.com/scarf-sh/tie
license:            Apache-2.0
license-file:       LICENSE
author:             Alex Biehl (alex@scarf.sh)
maintainer:         alex@scarf.sh, engineering@scarf.sh
copyright:          (c) 2022 Scarf Systems
category:
extra-source-files: CHANGELOG.md
data-files:
  Response.template.hs
  Request.template.hs
  test/golden/**/*.out
  test/golden/**/*.yaml

source-repository head
  type:     git
  location: https://github.com/scarf-sh/tie

library
  autogen-modules:  Paths_tie
  other-modules:    Paths_tie
  exposed-modules:
    Tie
    Tie.Codegen.Cabal
    Tie.Codegen.Imports
    Tie.Codegen.Operation
    Tie.Codegen.Request
    Tie.Codegen.Response
    Tie.Codegen.Schema
    Tie.Name
    Tie.Operation
    Tie.Resolve
    Tie.Type
    Tie.Writer

  build-depends:
    , aeson
    , base
    , bytestring
    , containers
    , directory
    , filepath
    , http-media
    , insert-ordered-containers
    , lens
    , mtl
    , openapi3
    , prettyprinter
    , relude
    , text
    , unordered-containers
    , yaml

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude),
    relude

  hs-source-dirs:   src
  default-language: Haskell2010

executable tie
  build-depends:
    , base
    , optparse-applicative
    , relude
    , tie

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude),
    relude

  main-is:          Main.hs
  hs-source-dirs:   bin
  default-language: Haskell2010

test-suite tie-tests
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  autogen-modules:    Paths_tie
  other-modules:      Paths_tie
  other-modules:
    Test.Tie.Golden
    Test.Tie.Operation

  build-depends:
    , aeson
    , base
    , bytestring
    , containers
    , filepath
    , hspec
    , insert-ordered-containers
    , openapi3
    , prettyprinter
    , relude
    , tasty
    , tasty-golden
    , tasty-hspec
    , tasty-hunit
    , text
    , tie
    , yaml

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude),
    relude

  build-tool-depends: tasty-discover:tasty-discover -any
  hs-source-dirs:     test
